# crypto3-multiprecision-marshalling

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  multi-platform-test.yml  on-pull-request-untrusted.yml  publish-test-result.yml
include/nil/crypto3/marshalling/multiprecision/processing/: size_to_type.hpp
include/nil/crypto3/marshalling/multiprecision/processing/detail/: size_to_type.hpp
include/nil/crypto3/marshalling/multiprecision/types/: bitfield.hpp  integral.hpp
include/nil/crypto3/marshalling/multiprecision/types/adapter/: fixed_bit_length.hpp
include/nil/crypto3/marshalling/multiprecision/types/detail/bitfield/: basic_type.hpp
include/nil/crypto3/marshalling/multiprecision/types/detail/integral/: basic_fixed_precision_type.hpp
test/: CMakeLists.txt  bitfield.cpp  failing.cpp  integral.cpp  integral_fixed_size_container.cpp  integral_non_fixed_size_container.cpp  utils.h
